updated the egnimos icon

--- a/web/index.html
+++ b/web/index.html
@@ -25,10 +25,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="egnimos">
-  <link rel="apple-touch-icon" href="icons/egnimos_bw.png">
+  <link rel="apple-touch-icon" href="icons/Group_392-4.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="egnimos_bw.png"/>
+  <link rel="icon" type="image/png" href="Group_392-4.png"/>
 
   <title>egnimos</title>
   <link rel="manifest" href="manifest.json">
